# pennapps

./: .env.template  Dockerfile  Makefile  README.md  config.py  dependencies.py  main.py  metaphor.py  pyproject.toml  requirements.txt
mlbot/: __init__.py  agent.py  docker.py  errors.py  mlbot.py  models.py  sandbox.py  store.py  utils.py
mlbot/exec_codes/: DockerExecutor.run
mlbot/prompts/: MLBot.query_file  functions.json
routers/: analyze.py  chat.py  upload.py
scripts/: docker-build
